cmake_minimum_required(VERSION 2.8)
project(RxLog CXX)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++14 -Wno-unused-function")
set(CMAKE_CXX_FLAGS_DEBUG "-O0 -fno-inline -g3 -fstack-protector-all")
set(CMAKE_CXX_FLAGS_RELEASE "-Ofast -g0 -march=native -mtune=native -DNDEBUG")
include_directories(include)
include_directories(external/RxCpp/Rx/v2/src)
include_directories(external/Catch/include)
add_subdirectory(test)
